# web-language-test

web-boot/: pom.xml
web-boot/src/main/java/com/ilxqx/web_java/: SysUser.java  SysUserController.java  SysUserRepository.java  WebJavaApplication.java
web-boot/src/main/resources/: application.yml
web-boot/src/test/java/com/ilxqx/web_java/: WebJavaApplicationTests.java
web-go/: .gitignore  app.go  db.go  entity.go  go.mod  go.sum  logger.go  main.go
web-quarkus/: README.md  pom.xml
web-quarkus/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-micro
web-quarkus/src/main/java/com/ilxqx/web_quarkus/: SysUser.java  SysUserRepository.java  SysUserResource.java
web-quarkus/src/main/resources/: application.properties
web-quarkus/src/test/java/com/ilxqx/: GreetingResourceIT.java  GreetingResourceTest.java
web-rust/: Cargo.toml
web-rust/src/: app.rs  entity.rs  lib.rs  main.rs
